Added images/chicago-deep-pizza-muffins.jpeg and recipes/chicago-deep-pizza-muffins.html. Edited recipes/Turkey-Meatball-Stew.html

--- a/recipes/Turkey-Meatball-Stew.html
+++ b/recipes/Turkey-Meatball-Stew.html
@@ -81,12 +81,15 @@
                 </ol>
             <h2>Nutritional Value</h2>
                 <p>
-                    Per Serving: 357 calories; protein 21.6g; carbohydrates 29.9g; fat 16.9g; cholesterol
+                    <strong>Per Serving:</strong> 357 calories; protein 21.6g; carbohydrates 29.9g; fat 16.9g; cholesterol
                     89mg; sodium 633.4mg.
                 </p>
-                <p> 
-                    Visit <a href="https://www.allrecipes.com/recipe/281661/turkey-meatball-stew/">turkey-meatball-stew</a> for more 
-                    information on this recipe.
-                </p>
+        <footer>
+            <p> 
+                Visit <a href="https://www.allrecipes.com/recipe/8331294/chicago-deep-dish-pizza-muffins/">chicago-deep-dish-pizza-muffins</a> for more 
+                information on this recipe.
+            </p>
+        </footer>
+                
         </body>
     </html>
