--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
             <title>Recipes</title>
         </head>
         <body>
-            <h1>Welcome to my Recipes</h1>
-            <img src="images/turkey-meatball-stew.jpeg">
+            <header>
+                <h1>Welcome to my Recipes</h1>
+                <nav>
+                    <ul>
+                        <li><a href="recipes/Turkey-Meatball-Stew.html">Turkey Meatball Stew</a></li>
+                        <li><a href="recipes/Chicago-Deep-Dish-Pizza-Muffins.html">Chicago Deep Dish Pizza Muffins</a></li>
+                        <li><a href="recipes/Easy-Meatloaf.html">Easy Meatloaf</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <h2>Drip-Drop your saliva</h2>
+                <img src="images/turkey-meatball-stew.jpeg"><br>Turkey Meatball Stew
+                <img src="images/chicago-deep-dish-pizza-muffins.jpeg" width="500px"><br>Chicago Deep Dish Pizza Muffins
+                <img src="images/easy-meatloaf.jpeg"><br>Easy Meatloaf
+
+            <p>
+                Please learn with <a href="https://www.theodinproject.com/">Odin Project</a>
+            </p>
             
             
         </body>
