--- a/recipes/Turkey-Meatball-Stew.html
+++ b/recipes/Turkey-Meatball-Stew.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <h1>Turkey Meatball Stew</h1>
-            <img src="../images/turkey-meatball-stew.jpeg" alt="Turkey Meatball Stew">
+            <img src="../images/turkey-meatball-stew.jpeg" alt="Turkey Meatball Stew recipe image">
             <h2>Description</h2>
                 <p>
                     A one-pot comfort food stew with a rich, savory broth, and
