General edit on all files except index.html

--- a/recipes/Chicago-Deep-Dish-Pizza-Muffins.html
+++ b/recipes/Chicago-Deep-Dish-Pizza-Muffins.html
@@ -97,7 +97,7 @@
                 </p>
             <h2>Nutritional Value</h2>
                 <p>
-                    <strong>Per Serving:</strong> 194 calories; fat 7.8g; cholesterol 17.5mg; sodium 532.3mg; carbohydrates 19.7g; 
+                    <em>Per Serving:</em> 194 calories; fat 7.8g; cholesterol 17.5mg; sodium 532.3mg; carbohydrates 19.7g; 
                     protein 10.3g
                 </p>
         <footer>
