--- a/recipes/Easy-Meatloaf.html
+++ b/recipes/Easy-Meatloaf.html
@@ -57,7 +57,7 @@
                 </ol>
             <h2>Nutritional Value</h2>
                 <p>
-                    <strong>Per Serving:</strong> 372 calories; protein 18.2g; carbohydrates 18.5g; fat 24.7g; 
+                    <em>Per Serving:</em> 372 calories; protein 18.2g; carbohydrates 18.5g; fat 24.7g; 
                     cholesterol 98mg; sodium 334.6mg
                 </p>
         <footer>
