--- a/recipes/Turkey-Meatball-Stew.html
+++ b/recipes/Turkey-Meatball-Stew.html
@@ -81,7 +81,7 @@
                 </ol>
             <h2>Nutritional Value</h2>
                 <p>
-                    <strong>Per Serving:</strong> 357 calories; protein 21.6g; carbohydrates 29.9g; fat 16.9g; cholesterol
+                    <em>Per Serving:</em> 357 calories; protein 21.6g; carbohydrates 29.9g; fat 16.9g; cholesterol
                     89mg; sodium 633.4mg.
                 </p>
         <footer>
