Edited all .html files- fixing some issues

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </header>
 
             <h2>Drip-Drop your saliva</h2>
-                <img src="images/turkey-meatball-stew.jpeg"><br>Turkey Meatball Stew
-                <img src="images/chicago-deep-dish-pizza-muffins.jpeg" width="500px"><br>Chicago Deep Dish Pizza Muffins
-                <img src="images/easy-meatloaf.jpeg"><br>Easy Meatloaf
+                <img src="images/turkey-meatball-stew.jpeg" width="500px" height="300px"><br>Turkey Meatball Stew<br>
+                <img src="images/chicago-deep-dish-pizza-muffins.jpeg" width="500px" height="300px"><br>Chicago Deep Dish Pizza Muffins<br>
+                <img src="images/easy-meatloaf.jpeg" width="500px" height="300px"><br>Easy Meatloaf<br>
 
             <p>
                 Please learn with <a href="https://www.theodinproject.com/">Odin Project</a>
