--- a/recipes/Easy-Meatloaf.html
+++ b/recipes/Easy-Meatloaf.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <h1>Easy Meatloaf</h1>
-            <img src="../images/easy-meatloaf.jpeg" alt="Easy Meatloaf recipe image">
+            <img src="../images/easy-meatloaf.jpeg" width="500px" height="300px" alt="Easy Meatloaf recipe image">
             <h2>Description</h2>
                 <p>
                     This is a very easy and no fail recipe for meatloaf. It won't take long to make at 
@@ -31,7 +31,7 @@
                    
             <h2>Steps</h2>
                 <ol>
-                    <li><strong>Step 1</stong>
+                    <li><strong>Step 1</strong>
                         <p>
                             Preheat oven to 350 degrees F (175 degrees C).
                         </p>
