--- a/recipes/Turkey-Meatball-Stew.html
+++ b/recipes/Turkey-Meatball-Stew.html
@@ -8,7 +8,7 @@
         </head>
         <body>
             <h1>Turkey Meatball Stew</h1>
-            <img src="../images/turkey-meatball-stew.jpeg" alt="Turkey Meatball Stew recipe image">
+            <img src="../images/turkey-meatball-stew.jpeg" width="500px" height="300px" alt="Turkey Meatball Stew recipe image">
             <h2>Description</h2>
                 <p>
                     A one-pot comfort food stew with a rich, savory broth, and
@@ -43,7 +43,7 @@
                 </ol>
             <h2>Steps</h2>
                 <ol>
-                    <li><strong>Step 1</stong>
+                    <li><strong>Step 1</strong>
                         <p>
                             Preheat the oven to 375 degrees F (190 degrees C). Line a rimmed baking
                             sheet with foil. Coat a wire rack with nonstick cooking spray, set on
