--- a/recipes/Chicago-Deep-Dish-Pizza-Muffins.html
+++ b/recipes/Chicago-Deep-Dish-Pizza-Muffins.html
@@ -9,7 +9,7 @@
         <body>
             <h1>Chicago Deep Dish Pizza Muffins</h1>
             <img 
-                src="../images/chicago-deep-dish-pizza-muffins.jpeg" alt="chicago deep dish pizza muffins 
+                src="../images/chicago-deep-dish-pizza-muffins.jpeg" width="500px" height="300px" alt="chicago deep dish pizza muffins 
                     recipe image"
             >
             <h2>Description</h2>
@@ -34,7 +34,7 @@
                    
             <h2>Steps</h2>
                 <ol>
-                    <li><strong>Step 1</stong>
+                    <li><strong>Step 1</strong>
                         <p>
                             Preheat the oven to 400 degrees F (200 degrees C). Generously grease a 12-cup 
                             standard muffin pan with 2 teaspoons oil.
