Added return home navigation at the bottom of recipes pages

--- a/recipes/Chicago-Deep-Dish-Pizza-Muffins.html
+++ b/recipes/Chicago-Deep-Dish-Pizza-Muffins.html
@@ -105,6 +105,9 @@
                 Visit <a href="https://www.allrecipes.com/recipe/281661/turkey-meatball-stew/">turkey-meatball-stew</a> for more 
                 information on this recipe.
             </p>
+            <p>
+               Click here to <a href="../index.html">Return Home</a>
+            </p>
         </footer>      
         </body>
     </html>
