--- a/recipes/Turkey-Meatball-Stew.html
+++ b/recipes/Turkey-Meatball-Stew.html
@@ -89,6 +89,9 @@
                 Visit <a href="https://www.allrecipes.com/recipe/8331294/chicago-deep-dish-pizza-muffins/">chicago-deep-dish-pizza-muffins</a> for more 
                 information on this recipe.
             </p>
+            <p>
+                Click here to <a href="../index.html">Return Home</a>
+             </p>
         </footer>
                 
         </body>
