--- a/recipes/Easy-Meatloaf.html
+++ b/recipes/Easy-Meatloaf.html
@@ -65,6 +65,9 @@
                 Visit <a href="https://www.allrecipes.com/recipe/16354/easy-meatloaf/">chicago-deep-dish-pizza-muffins</a> for more 
                 information on this recipe.
             </p>
+            <p>
+                Click here to <a href="../index.html">Return Home</a>
+             </p>
         </footer>
                 
         </body>
